# AI

./: .gitignore  README.md
.github/workflows/: hf.yml  openai.yml  py.yaml
autogen/: README.md
claude/: accounts.md  code.md
comet/: README.md  opik.md
dify/: README.md  deployment.md  marketplace.md
dify/app/: README.md  marketplace.md  type.md
dify/assets/: aiven.mysql  aiven.mysql.json  aiven.mysql.yml  chart tool.yml  fetch.py  list.py  render_md.py  sql tool.yml
dify/cli/: README.md  plugin.sh
dify/knowledge/: README.md  chunk.md  marketplace.md
dify/marketplace/: README.md  marketplace.md  models.md  plugins.md  tools.md
dify/node/: README.md  logic.md  transform.md
dify/ops/: console.md  container.md  deployment.md  monitoring.md
dify/ops/1.10/: .env  docker-compose.yaml
dify/ops/1.10.0/: .env  docker-compose.yaml
dify/ops/1.10.0/conf/nginx/: docker-entrypoint-mount.sh
dify/ops/1.11/: docker-compose.yaml
dify/ops/1.12/: .env  docker-compose.yaml
dify/ops/db/: admin.sql
dify/plugin/: README.md
huggingface/: spaces.md  transformers.md
huggingface/py/: pyproject.toml
huggingface/py/davidkhala/huggingface/: __init__.py
huggingface/py/davidkhala/huggingface/local/: BAAI.py  __init__.py
huggingface/py/davidkhala/huggingface/transformers/: __init__.py  auto.py
huggingface/py/tests/: hf_test.py  local_test.py  transformers_test.py
model/fine-tuning/: LoRa.md
opencode/: README.md
opencode/node/: index.js  package.json
opencode/node/test/: client.js
py/: README.md  pyproject.toml
py/davidkhala/ai/: model.py  opik.py  you.py
py/davidkhala/ai/agent/: README.md  langgraph.py  ragflow.py  you.py
py/davidkhala/ai/agent/dify/: __init__.py  app.py  base.py  common.py  interface.py  knowledge.py  model.py  plugin.py
py/davidkhala/ai/agent/dify/api/: __init__.py  app.py  knowledge.py
py/davidkhala/ai/agent/dify/api/knowledge/: chunk.py  dataset.py  document.py  metadata.py  model.py
py/davidkhala/ai/agent/dify/console/: __init__.py  plugin.py  session.py
py/davidkhala/ai/agent/dify/console/knowledge/: dataset.py  pipeline.py
py/davidkhala/ai/agent/dify/db/: app.py  knowledge.py  orm.py  sys.py
py/davidkhala/ai/agent/dify/model/: __init__.py  api.py  knowledge.py  workflow.py
py/davidkhala/ai/agent/dify/ops/: db.py
py/davidkhala/ai/agent/dify/ops/console/: __init__.py  knowledge.py  plugin.py  session.py
py/davidkhala/ai/agent/dify/ops/db/: __init__.py  app.py  knowledge.py  orm.py
py/davidkhala/ai/agent/dify/plugins/: __init__.py  file.py  firecrawl.py  jina.py  popular.py
py/davidkhala/ai/ali/: agentbay.py  dashscope.py
py/davidkhala/ai/anthropic/: __init__.py
py/davidkhala/ai/api/: __init__.py  open.py  openrouter.py  siliconflow.py
py/davidkhala/ai/atlas/: __init__.py
py/davidkhala/ai/google/: adk.py  gemini.py
py/davidkhala/ai/huggingface/: BAAI.py  __init__.py  inference.py  legacy.py
py/davidkhala/ai/mistral/: __init__.py  agent.py  ai.py  file.py  llm.py  ocr.py
py/davidkhala/ai/model/: __init__.py  chat.py  embed.py  garden.py
py/davidkhala/ai/openai/: __init__.py  azure.py  databricks.py  native.py  opik.py
py/davidkhala/ai/openrouter/: __init__.py
py/davidkhala/ai/router/: open.py
py/tests/: ali_test.py  atlas_test.py  azure_test.py  databricks_test.py  dify_test.py  hf_test.py  langchain_test.py  mistral_test.py  openai_test.py  openrouter_test.py  ragflow_test.py  siliconflow_test.py  test_dify.py  util.py  you_test.py
py/tests/api/: openrouter_test.py  siliconflow_test.py
py/tests/dify/: cloud_ops_test.py  cloud_test.py  local_test.py
py/tests/fixtures/: About THEi - Technological and Higher Education Institute of Hong Kong.html  empty.docx
py/tests/openai/: azure_test.py  databricks_test.py  openai_test.py
ragflow/: KnowledgeBase.md  README.md  deployment.md  node.md
