[project]
name = "davidkhala.ai"
version = "0.0.0"
description = "misc AI modules"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
langchain = [
    "langgraph" # TODO
]
api = [
    "requests"
]
[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
