[project]
name = "davidkhala.ai"
version = "0.2.3"
description = "misc AI modules"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
langchain = [
    "langgraph", "langchain",
    "langchain-openai ; python_version < '3.14'" # required by openRouter
]
ragflow = ["ragflow-sdk"]
google = ["google-genai", "google-adk"]
api = ["davidkhala.utils[http_request]"]
minimax = ["anthropic", "openai"]
mistral = ["mistralai", "davidkhala-ml-ocr"]
you = ['youdotcom']
openrouter = ["openrouter"]
ali = ["dashscope", "wuying-agentbay-sdk", "davidkhala.utils"]
azure = ["openai", "davidkhala.utils", "davidkhala-ml-ocr"]
telemetry = [
    "opik ; python_version < '3.14'" # limit py version: PyO3 v0.22.6 currently supports up to Python 3.13.
]
dify = ["dify-plugin", "davidkhala.utils[http_request]", "davidkhala.databases[pg]"]
atlas = ["voyageai"]
[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest"
]
