[project]
name = "davidkhala.huggingface"
version = "0.0.0"
description = "huggingface modules"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["huggingface_hub"]
[project.optional-dependencies]


[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",'onnxruntime', 'onnx', # for test only
]
