[project]
name = "davidkhala.huggingface"
version = "0.0.0"
description = "huggingface modules"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["huggingface_hub", "davidkhala-ai"]
[project.optional-dependencies]
transformers = ["transformers[torch]", "hf_xet"]


[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest"
]
download = ['onnxruntime', 'onnx']
DeepSeek-OCR = ["torchvision", "addict", "einops", "easydict"]
# use `uv sync --no-build-isolation` and add flash-attn==2.7.3 if you need GPU

